--- a/nimdoc.cfg
+++ b/nimdoc.cfg
@@ -1,5 +1,5 @@
 project
-outDir = htmldocs
+o = htmldocs # `--outDir` alias is only available since Nim 0.20.
 
 doc.item.seeSrc = """
 &nbsp;&nbsp;<a href="$url/blob/$commit/$path#L$line" class="link-seesrc" target="_blank">Source</a>
